[project]
name = "titanic-survival-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "missingpy>=0.2.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.1.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
