[project]
name = "titanic-survival-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pycaret>=3.3.2",
    "scikit-learn>=1.4.0",
    "sklearn-utils>=0.0.15",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
